# mec-app-solution-accelerator

./: .gitignore  BACKLOG.MD  BRANCH-GUIDE.MD  MecSolutionAccelerator.sln  README.md  SUPPORT.md  TEST-PUSH-CESAR.txt  VISUALSTUDIO_DOCKER_DEPLOYMENT.MD  VS_DOCKER_DEPLOY.MD  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml  docker-compose_deepstream_amd64.override.yml  docker-compose_deepstream_amd64.yml  docker-compose_deepstream_arm64.override.yml  docker-compose_deepstream_arm64.yml  visualstudio_docker_deployment.md
RTSP-server/: RTSP-server-Download-URL.txt  rtsp-simple-server.yml
components/: redis-pubsub.yaml  statestore.yaml
docs/: APP_K8S_K3S_SIMPLE_DEPLOYMENT_WITH_SCRIPT.MD  APP_K8S_K3S_STEP_BY_STEP_DEPLOYMENT.MD  ARCHITECTURE_MEC_ACCELERATOR.md  BUILD_AND_PUSH_IMAGES_TO_DOCKER_HUB.MD  CONTROL_PLANE_DEPLOYMENT.MD  DOCKER_COMPOSE_DEPLOYMENT.MD  GITHUB_CODESPACES_DEPLOYMENT.md  HOW_TO_CREATE_RTSP_SERVER.MD  HOW_TO_PROVISION_NEW_FEED.MD  HOW_TO_PROVISION_RTSP_CONTAINER.MD  K3S_JETSON_AGX_ORIN.MD  K3S_UBUNTU_DEPLOYMENT.MD  K8S_AKS_DEPLOYMENT.md  K8S_AKS_EDGE_ESSENTIALS.MD  K8S_IN_DOCKER_DESKTOP_DEPLOYMENT.MD  K8S_MINIKUBE_DEPLOYMENT.MD  MONGO_DB_CLEAN.MD  RTSP Start up.md  RTSP-server-configuration.md  RTSP_START_UP.MD  SET_DOCKER_REGISTRY_VARIABLE.MD  VS_DOCKER_DEPLOYMENT.MD  (+1 more)
src/Services/ControlPlane/CameraDiscoveryHandler/akri-camera-discovery-handler/: Cargo.toml  Dockerfile.discovery-handler  build-and-push-image.sh
src/Services/ControlPlane/CameraDiscoveryHandler/akri-camera-discovery-handler/src/: discovery_handler.rs  main.rs
(+975 files in other folders)
