[package]
name = "akri-camera-discovery-handler"
version = "0.1.0"
authors = ["Carlos Carrillo Boj <carlos.carrillo@plainconcepts.com>"]
edition = "2018"

[dependencies]
akri-discovery-utils = { git = "https://github.com/project-akri/akri", package = "akri-discovery-utils", rev = "a0a173ca8ae64b149a82009d7094a62ebdd83bd1" }
async-trait = "0.1.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version =  "0.1.14", features = ["net"] }
tonic = { version = "0.5.2", features = ["tls"] }
anyhow = "1.0.38"
reqwest = "0.10.8"
env_logger = "0.9.0"
log = "0.4"
openssl-sys = { version = "0.9", features = ["vendored"] }
mongodb = "2.8.0"
bson = "2.8.0"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.45"